RestAssured day11 class